--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -45,12 +45,12 @@ strong {
 	#main {
 		width            : 100%;
 		height           : 100%;
-		padding          : 72px 0 108px 0;
+		padding          : 30px; /* useWBHeader and useWBfooter toggle default */
 		position         : relative;
 	}
 
 	body.application #main {
-		padding-top      : 162px;
+		padding-top      : 120px; /* useWBHeader and useWBfooter toggle default */
 	}
 
 	/* Maps */
@@ -89,13 +89,15 @@ strong {
 		font-size          : 12px;
 		color              : #fff;
 		width              : 100%;
-		height             : 42px;
 		line-height        : 25px;
 		background         : #2b292a;
 		position           : absolute;
 		top                : 0;
 		left               : 0;
 		padding            : 0 10px;
+
+		display: none; /* useWBHeader toggle default */
+		height: 0; /* useWBHeader toggle default */
 	}
 	#wb-header a {
 		color              : #fff;
@@ -124,7 +126,7 @@ strong {
 		color            : #fff;
 		font-weight      : bold;
 		position         : absolute;
-		top              : 42px;
+		top              : 0; /* useWBHeader toggle default */
 		left             : 0;
 		width            : 100%;
 	}
@@ -246,7 +248,7 @@ strong {
 			width            : 300px;
 			height           : 69px;
 			padding-left     : 81px;
-			background       : url("../images/project-logo.png") no-repeat 0 8px;
+			/* background       : url("../images/project-logo.png") no-repeat 0 8px; /* usePumaLogo toggle default */
 			line-height      : 38px;
 			font-size        : 30px;
 			font-weight      : 800;
@@ -381,7 +383,7 @@ strong {
 
 		/* Application */
 		#content-application {
-			top              : 72px;
+			top              : 30px; /* useWBHeader toggle default */
 			width            : 100%;
 		}
 		#toolbar {
