allowDownloadsLink toggle with defaults

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -181,6 +181,9 @@ strong {
 	#help-link{
 		display: none; /* usePumaHelp toggle default */
 	}
+	#downloads-link{
+		display: none; /* useDownloadsLink toggle default */
+	}
 
 	#header .user {
 		position         : absolute;
