fix css syntax error

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -366,7 +366,7 @@ strong {
                 }
                 #content-intro-terms #agreement-btns div {
                     float: right;
-                    background-color: '#ff0000';
+                    background-color: #ff0000;
                     height: 30px;
                     margin-left: 20px;
                     width: 75px;
