--- a/src/css/project/urbis.css
+++ b/src/css/project/urbis.css
@@ -76,6 +76,9 @@
 .urbis .x-grid-checkheader-checked {
     background-image: url('../../images/urbis/checked.png');
 }
+.newDesign .x-tree-checkbox-checked {
+    background-image: url('../../images/urbis/checked.png');
+}
 
 /* Slider ======== */
 .urbis .x-slider-thumb {
