--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -415,6 +415,15 @@
 .newDesign .x-grid-checkheader-checked {
     background-image: url('../images/new/checked.png');
 }
+.newDesign .x-tree-checkbox {
+    background-image: url('../images/new/unchecked.png');
+    margin-top: 2px;
+    width: 16px;
+    height: 16px;
+}
+.newDesign .x-tree-checkbox-checked {
+    background-image: url('../images/new/checked.png');
+}
 
 /* Slider ======== */
 .newDesign .x-slider-thumb {
