--- a/src/css/project/eea.css
+++ b/src/css/project/eea.css
@@ -34,7 +34,7 @@
 }
 .eea .x-btn.custom-button.btn-confirm {
 	background: #077db8;
-	border: 1px solid white;
+	border: 1px solid #077db8;
 }
 .eea .x-btn.custom-button.btn-confirm .x-btn-inner {
 	color                : #fff;
