--- a/src/__new/js/util/histogram/Histogram.css
+++ b/src/__new/js/util/histogram/Histogram.css
@@ -8,6 +8,7 @@
 
 .histogram-bar {
     background: rgb(220,220,220);
+    border-right: 1px solid white;
     bottom: 0;
     float: left;
     position: relative;
