--- a/src/css/project/eea.css
+++ b/src/css/project/eea.css
@@ -12,6 +12,10 @@
 	background-color: rgba(0, 63, 95, .95);
 }
 
+.eea #content-intro {
+	width: 810px;
+}
+
 /* Header === */
 .eea #toolbar {
 	background-color: rgb(0, 63, 95);
@@ -22,6 +26,7 @@
 	background: url("../../images/eea/logo.png") no-repeat 15px 3px;
 	background-size: 200px;
 	height: 73px;
+	width: 250px;
 }
 
 /* Buttons ================ */
