--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -54,7 +54,7 @@
 
 /* == tool window == */
 .tool-window {
-    background: rgb(255,255,255);
+    background: rgba(255,255,255,.95);
     border-radius: .1rem;
     -webkit-box-shadow: 0 0 4px rgb(136, 136, 136);
     -moz-box-shadow: 0 0 4px rgb(136, 136, 136);
@@ -65,9 +65,8 @@
     width: 40rem;
     padding: .5rem;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -15rem 0 0 -20rem;
+    top: 8rem;
+    left: calc(50% - 20rem);
     z-index: 99999;
 }
 
