--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -62,6 +62,20 @@
 .newDesign #header .user a {
     padding: 0 10px;
 }
+
+/* login */
+.newDesign #loginwindow .x-btn {
+    border-right: 1px solid white;
+}
+.newDesign #loginwindow .x-btn:last-child {
+    border-right: 1px solid white;
+    background: #aaa;
+}
+
+.newDesign #loginwindow .x-btn:last-child:hover {
+    background: #888;
+}
+
 /* Footer === */
 .newDesign #footer-bar {
     border-top: 2px solid #d3d2d2;
