--- a/src/css/project/urbis.css
+++ b/src/css/project/urbis.css
@@ -85,7 +85,7 @@
 .urbis .x-grid-checkheader-checked {
     background-image: url('../../images/urbis/checked.png');
 }
-.newDesign .x-tree-checkbox-checked {
+.urbis .x-tree-checkbox-checked {
     background-image: url('../../images/urbis/checked.png');
 }
 
