--- a/src/css/project/melodies.css
+++ b/src/css/project/melodies.css
@@ -1,10 +1,16 @@
 /* Header === */
 .melodies #header {
+	display: block;
+	height: 30px;
 	background: #fff;
 	border-bottom: 1px solid #ccc;
 	border-top: 2px solid #0f70b7;
 	box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2);
+	position: absolute;
+	left: auto;
+	right: 0;
 	z-index: 5;
+	width: 70px;
 }
 .melodies .application #header {
 	border-bottom: 1px solid #eee;
